Minor modifications